crates/swc_ecma_parser/tests/test262-error-references/fail/f1ee13ed9e476d25.js.stderr
error: LineBreak cannot follow 'throw'
 --> $DIR/tests/test262-parser/fail/f1ee13ed9e476d25.js:1:15
  |
1 | throw /*   */ e
  |               ^

